crates/systemctl-tui/src/components/snapshots/systemctl_tui__components__home__tests__snapshots__command_palette_open.snap
---
source: crates/systemctl-tui/src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────────────────────────────────────────────── Press ? or F1 for help ─╮"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details────────────────────────────────────────────────────────────────────────────────╮"
"│cron                        ││Description: cron.service description [?]                                               │"
"│docker                      ││     Active: active (running)                                                           │"
"│nginx                       ││ Enablement: enabled · global                                                           │"
"│bad-config                 ╭─All commands─────────────────────────────────────────────────╮                           │"
"│[T] backup                 │╭ Search commands ───────────────────────────────────────────╮│───────────────────────────╯"
"│ssh                        ││                                                            ││───────────────────────────╮"
"│                           │╰────────────────────────────────────────────────────────────╯│                           │"
"│                           │ Selected unit · cron.service                                 │                           │"
"│                           │  Stop                                                       t│                           │"
"│                           │  Restart                                                    r│                           │"
"│                           │  Kill                                                       K│                           │"
"│                           │  Disable                                                    d│                           │"
"│                           │  Mask                                                       m│                           │"
"│                           │  Open logs in pager                                         o│                           │"
"│                           │  Copy unit file path                                        c│                           │"
"│                           │  Edit unit file                                             e│                           │"
"│                           │ Units                                                        │                           │"
"│                           │  Search units                                     Ctrl+F or /│                           │"
"│                           │  Filter units                                              F2│                           │"
"│                           │  Refresh units                                               │                           │"
"│                           │ Logs                                                         │                           │"
"│                           │  Reverse log order                                     Ctrl+R│                           │"
"│                           │ Systemd                                                      │                           │"
"│                           │  Reload system manager (daemon-reload)                       │                           │"
"│                           │ Application                                                  │                           │"
"│                           │  Toggle debug logger                                   Ctrl+L│                           │"
"│                           │  Show help                                             ? / F1│                           │"
"│                           │  Quit                                              q / Ctrl+Q│                           │"
"│                           ╰──────────────────────────────────────────────────────────────╯                           │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
"Run command: <enter> | Navigate: <up>/<down> | Close: <esc>                                                       v0.7.0"
