crates/systemctl-tui/src/components/snapshots/systemctl_tui__components__home__tests__snapshots__command_palette_tiny_40x15.snap
---
source: crates/systemctl-tui/src/components/home.rs
expression: terminal.backend()
---
"╭─All commands─────────────────────────╮"
"│╭ Search commands ───────────────────╮│"
"││                                    ││"
"│╰────────────────────────────────────╯│"
"│  Stop                               t│"
"│  Restart                            r│"
"│  Kill                               K│"
"│  Disable                            d│"
"│  Mask                               m│"
"│  Open logs in pager                 o│"
"│  Copy unit file path                c│"
"│  Edit unit file                     e│"
"│  Search units             Ctrl+F or /│"
"│  Filter units                      F2│"
"╰──────────────────────────────────────╯"
