crates/systemctl-tui/src/components/snapshots/systemctl_tui__components__home__tests__snapshots__error_state.snap
---
source: crates/systemctl-tui/src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────────────────────────────────────────────── Press ? or F1 for help ─╮"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details────────────────────────────────────────────────────────────────────────────────╮"
"│cron                        ││Description: cron.service description [?]                                               │"
"│docker                      ││     Active: active (running)                                                           │"
"│nginx                       ││ Enablement: enabled · global                                                           │"
"│bad-config                  ││  Unit file: /etc/systemd/system/cron.service                                           │"
"│[T] backup                  │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│ssh                         │╭─Logs — cron.service [newest first; ctrl+r to reverse]──────────────────────────────────╮"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││    ╭─Error──────────────────────────────────────────╮                                  │"
"│                            ││    │Failed to connect to systemd:                   │                                  │"
"│                            ││    │Unit dbus not found                             │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    ╰────────────────────────────────────────────────╯                                  │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
"Close menu: <esc>                                                                                                 v0.8.0"
