crates/systemctl-tui/src/components/snapshots/systemctl_tui__components__home__tests__snapshots__filter_popup_tiny_40x15.snap
---
source: crates/systemctl-tui/src/components/home.rs
expression: terminal.backend()
---
"╭─Search (╭─Unit filters─────╮or help ─╮"
"│         │    templates    p│         │"
"╰─────────│  ✓ services     v│─────────╯"
"╭─Units (1│  ✓ timers       t│╭─Details╮"
"│cron     │  ✓ other        o││Descript│"
"│docker   │  ✓ active       c││Active: │"
"│nginx    │  ✓ inactive     i││Enableme│"
"│bad-confi│  ✓ failed       f││Unit fil│"
"│[T] backu│  ✓ enabled      e│╰────────╯"
"│ssh      │  ✓ disabled     d│╭─Logs — ╮"
"│         │  ✓ static       s││        │"
"│         │  ✓ masked       m││        │"
"│         │  ✓ loaded       l││        │"
"╰─────────│    not-found    u│╰────────╯"
"Toggle: <s╰──────────────────╯e: nv0.8.0"
