crates/systemctl-tui/src/components/snapshots/systemctl_tui__components__home__tests__snapshots__services_list_tiny_40x15.snap
---
source: crates/systemctl-tui/src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl Press ? or F1 for help ─╮"
"│                                      │"
"╰──────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details╮"
"│cron                        ││Descript│"
"│docker                      ││Active: │"
"│nginx                       ││Enableme│"
"│bad-config                  ││Unit fil│"
"│[T] backup                  │╰────────╯"
"│ssh                         │╭─Logs — ╮"
"│                            ││        │"
"│                            ││        │"
"│                            ││        │"
"╰────────────────────────────╯╰────────╯"
"Unit commands: enter | All commandv0.7.0"
