crates/systemctl-tui/src/components/snapshots/systemctl_tui__components__home__tests__snapshots__timer_details_120x40.snap
---
source: crates/systemctl-tui/src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────────────────────────────────────────────── Press ? or F1 for help ─╮"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details────────────────────────────────────────────────────────────────────────────────╮"
"│cron                        ││Description: backup.timer description                      Activates: backup.service    │"
"│docker                      ││     Active: active (waiting)                               Schedule: OnBootSec=10min   │"
"│nginx                       ││ Enablement: enabled · global                               Schedule: OnUnitActiveSec=2h│"
"│bad-config                  ││  Unit file: /etc/systemd/system/backup.timer             Persistent: yes               │"
"│[T] backup                  ││                                                        Random delay: 5min              │"
"│ssh                         ││                                                            Accuracy: 1min              │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭─Logs — backup.timer [newest first; ctrl+r to reverse]──────────────────────────────────╮"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
"Unit commands: enter | All commands: ctrl+p | Filter: F2 | Navigate: tab                                          v0.7.0"
