crates/systemctl-tui/src/components/snapshots/systemctl_tui__components__home__tests__snapshots__timer_details_80x24.snap
---
source: crates/systemctl-tui/src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────── Press ? or F1 for help ─╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details────────────────────────────────────────╮"
"│cron                        ││ Description: backup.timer description          │"
"│docker                      ││      Active: active (waiting)                  │"
"│nginx                       ││  Enablement: enabled · global                  │"
"│bad-config                  ││   Unit file: /etc/systemd/system/backup.timer  │"
"│[T] backup                  ││   Activates: backup.service                    │"
"│ssh                         ││    Schedule: OnBootSec=10min                   │"
"│                            ││    Schedule: OnUnitActiveSec=2h                │"
"│                            ││  Persistent: yes                               │"
"│                            ││Random delay: 5min                              │"
"│                            ││    Accuracy: 1min                              │"
"│                            │╰────────────────────────────────────────────────╯"
"│                            │╭─Logs — backup.timer [newest first; ctrl+r to re╮"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰────────────────────────────╯╰────────────────────────────────────────────────╯"
"Unit commands: enter | All commands: ctrl+p | Filter: F2 | Navigate: tab  v0.8.0"
